<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background_app"/>

    <LinearLayout
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:alpha="0.1"/>

    <LinearLayout
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TestActivity_Switch_UPnPService"
            android:id="@+id/id_MainActivity_Switch_UPnPService" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/MainActivity_Button_LoginGoogleFit"
            android:id="@+id/id_MainActivity_Button_LoginGoogleFit" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TestActivity_Button_ShowNotification"
            android:id="@+id/id_MainActivity_Button_ShowNotification"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TestActivity_Button_StartPoll"
            android:id="@+id/id_MainActivity_Button_StartPoll"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TestActivity_Button_GetSteps"
            android:id="@+id/id_MainActivity_Button_GetSteps"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TestActivity_Button_GetActivities"
            android:id="@+id/id_MainActivity_Button_GetActivities"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</RelativeLayout>